--- a/drupal/sites/all/themes/checkdesk/assets/css/style.css
+++ b/drupal/sites/all/themes/checkdesk/assets/css/style.css
@@ -7123,6 +7123,7 @@ header#header nav {
   position: fixed;
   top: 0;
   bottom: 0;
+  color: #fff;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -9492,9 +9493,14 @@ body.cke_editable blockquote {
   position: relative;
   color: #6f7a82;
   padding-left: 50px;
+  margin: 0 0 26px 0;
   border: 0 none;
   min-height: 56px;
   width: 75%;
+}
+.story .story-body blockquote p,
+body.cke_editable blockquote p {
+  margin-bottom: 0;
 }
 .story .story-body blockquote:before,
 body.cke_editable blockquote:before {
