--- a/drupal/sites/all/themes/checkdesk/assets/scss/module/_navigation.scss
+++ b/drupal/sites/all/themes/checkdesk/assets/scss/module/_navigation.scss
@@ -9,11 +9,8 @@ header#header nav {
   width: 60px;
   position: fixed;
   top: 0;
-  // adjust top for drupal toolbar
-  body.toolbar-drawer & {
-    // top: $toolbarHeight;
-  }
   bottom: 0;
+  color: #fff;
   @include box-sizing(border-box);
   z-index: $z-index-FixedNavbar;
 
